codimd/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: codimd-k8s
spec:
  basicAuth:
    secret: basic-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codimd
  namespace: codimd-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`md.mtaha.dev`)
      priority: 10
      middlewares:
        - name: basic-auth
      services:
        - kind: Service
          name: codimd-main
          namespace: codimd-k8s
          passHostHeader: true
          port: 3000
          scheme: http
  tls:
    domains:
      - main: md.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
